--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@angular/service-worker": "~11.0.9",
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.4.1",
     "ngx-bootstrap": "^6.2.0",
