--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run pkanvi:serve-ssr",
+    "serve:ssr": "node dist/pkanvi/server/main.js",
+    "build:ssr": "ng build && ng run pkanvi:server",
+    "prerender": "ng run pkanvi:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,10 +22,13 @@
     "@angular/forms": "~13.2.1",
     "@angular/platform-browser": "~13.2.1",
     "@angular/platform-browser-dynamic": "~13.2.1",
+    "@angular/platform-server": "~13.2.1",
     "@angular/router": "~13.2.1",
     "@angular/service-worker": "~13.2.1",
+    "@nguniversal/express-engine": "^13.0.2",
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.4.1",
+    "express": "^4.15.2",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -31,6 +38,8 @@
     "@angular-devkit/build-angular": "~13.2.2",
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.1",
+    "@nguniversal/builders": "^13.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
